--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 certifi==2025.4.26
@@ -6,14 +10,17 @@ click==8.1.8
 colorama==0.4.6
 fake-useragent==2.2.0
 Flask==3.1.0
+frozenlist==1.6.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+multidict==6.4.3
 numpy==2.2.5
 pandas==2.2.3
+propcache==0.3.1
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -25,3 +32,4 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 Werkzeug==3.1.3
+yarl==1.20.0
